envoy-gateway/envoy-gateway-setup/apps.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: eg
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: details
spec:
  parentRefs:
    - name: eg
  hostnames:
    - "www.details.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: details
          port: 9080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /details
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: productpage
spec:
  parentRefs:
    - name: eg
  hostnames:
    - "www.products.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: productpage
          port: 9080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /

---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: echo-service
spec:
  parentRefs:
    - name: eg
  hostnames:
    - "www.echo.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: echo-service
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
